<resources>
    <string name="app_name">ClickAndGo</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">NAME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="password_is_less_than_6_characters">Password is less than 6 characters</string>
    <string name="email_is_already_in_use">Email is already in use</string>
    <string name="email_address_is_badly_formatted">Email address is badly formatted</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="type_question">What?</string>
    <string name="type_coffee">COFFEE</string>
    <string name="type_eat">EAT</string>
    <string name="type_vegan">VEGAN</string>
    <string name="type_bar">BAR</string>
    <string name="type_hookah">HOOKAH</string>
    <string name="type_coffee_details" />
    <string name="type_eat_details" />
    <string name="type_vegan_details" />
    <string name="type_bar_details" />
    <string name="type_hookah_details" />
    <string name="group_question">How many?</string>
    <string name="group_single">SINGLE</string>
    <string name="group_date">DATE</string>
    <string name="group_friends">FRIENDS</string>
    <string name="group_party">PARTY</string>
    <string name="group_corporate">CORPORATE</string>
    <string name="group_single_details">1</string>
    <string name="group_date_details">2</string>
    <string name="group_friends_details">&lt;5</string>
    <string name="group_party_details">&lt;10</string>
    <string name="group_corporate_details">∞</string>
    <string name="money_question">How much?</string>
    <string name="money_economy">ECONOMY</string>
    <string name="money_middle">MIDDLE</string>
    <string name="money_business">BUSINESS</string>
    <string name="money_high">HIGH</string>
    <string name="money_luxury">LUXURY</string>
    <string name="money_economy_details">&lt;100</string>
    <string name="money_middle_details">&lt;200</string>
    <string name="money_business_details">&lt;300</string>
    <string name="money_high_details">&lt;500</string>
    <string name="money_luxury_details">∞</string>
    <string name="place_question">Where?</string>
    <string name="search">Search</string>
    <string name="go_question">Go!</string>
    <string name="nickname">Artem Sakh</string>
    <string name="support_us">Support Us</string>
    <string name="title_activity_maps">Map</string>
    <string name="history">History</string>
    <string name="wishlist">Wishlist</string>
    <string name="go">GO</string>
    <string name="sorry_message">Sorry, we can’t find any places according to your request. Change search settings and try again :)</string>
    <string-array name="subway_stations">
        <item>Іподром</item>
        <item>Академмістечко</item>
        <item>Арсенальна</item>
        <item>Берестейська</item>
        <item>Бориспільська</item>
        <item>Васильківська</item>
        <item>Видубичі</item>
        <item>Вирлиця</item>
        <item>Виставковий центр</item>
        <item>Вокзальна</item>
        <item>Героїв Дніпра</item>
        <item>Голосіївська</item>
        <item>Гідропарк</item>
        <item>Дарниця</item>
        <item>Деміївська</item>
        <item>Дніпро</item>
        <item>Дорогожичі</item>
        <item>Дружби народів</item>
        <item>Житомирська</item>
        <item>Золоті ворота</item>
        <item>Кловська</item>
        <item>Контрактова площа</item>
        <item>Либідська</item>
        <item>Лук\'янівська</item>
        <item>Лівобережна</item>
        <item>Лісова</item>
        <item>Майдан Незалежності</item>
        <item>Мінська</item>
        <item>Нивки</item>
        <item>Оболонь</item>
        <item>Олімпійська</item>
        <item>Осокорки</item>
        <item>Палац «Україна»</item>
        <item>Палац спорту</item>
        <item>Печерська</item>
        <item>Площа Льва Толстого</item>
        <item>Позняки</item>
        <item>Політехнічний інститут</item>
        <item>Почайна</item>
        <item>Поштова площа</item>
        <item>Святошин</item>
        <item>Сирець</item>
        <item>Славутич</item>
        <item>Тараса Шевченка</item>
        <item>Театральна</item>
        <item>Теремки</item>
        <item>Університет</item>
        <item>Харківська</item>
        <item>Хрещатик</item>
        <item>Центр</item>
        <item>Червоний хутір</item>
        <item>Чернігівська</item>
        <item>Шулявська</item>
    </string-array>
    <string name="welcome">Вітання!</string>
    <string name="welcomeText">Ми невелика команда розробників, що створила цей додаток. Зараз ми знаходимося в режимі beta-test, і будемо дуже раді, якщо ти нам скажеш про помилки в роботі програми або підтримаєш нас копієчкою! :)
</string>
    <string name="design_sakh_agency">design: @sakh.agency</string>
    <string name="report_about_errors">Повідомити про помилки</string>
</resources>